...
    <string name="league_logo">league_logo</string>
    <string name="home_logo">homeLogo</string>
    <string name="away_logo">awayLogo</string>
    <string name="league_id">ID:</string>

    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
...
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional."
    </string>
    <string name="description">Description</string>
    <string name="detail">Detail</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_favorite">FavoriteActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="next_match">Next Match</string>
    <string name="last_match">Last Match</string>
...
